# koi_blueprint_python

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  SECURITY.md
.agent/skills/: index.yaml
.agent/skills/add-background-task/: SKILL.md
.agent/skills/add-background-task/agents/: openai.yaml
.agent/skills/add-background-task/references/: fastapi-backgroundtasks-patterns.md  queue-worker-patterns.md  strategy-guide.md
.agent/skills/add-domain-module/: SKILL.md
.agent/skills/add-domain-module/agents/: openai.yaml
.agent/skills/add-infra-adapter/: SKILL.md
.agent/skills/add-observability/: SKILL.md
.agent/skills/add-websocket/: SKILL.md
.agent/skills/alembic-migration/: SKILL.md
.agent/skills/api-versioning/: SKILL.md
.agent/skills/architecture-review/: SKILL.md
.agent/skills/async-upgrade/: SKILL.md
.agent/skills/auth-rbac-setup/: SKILL.md
.agent/skills/ci-setup/: SKILL.md
.agent/skills/docker-deploy/: SKILL.md
.agent/skills/production-hardening/: SKILL.md
.agent/skills/rate-limit-setup/: SKILL.md
.agent/skills/server-init/: SKILL.md
.agent/skills/testing-scaffold/: SKILL.md
.cursor/rules/: koi-agent-skills.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: agent-skill-rule-discovery.md  ai-quickstart.md  architecture.md  audit-report.md  audit_report.md  fix-report.md  how-other-ai-use-this-project.md  modification-plan.md  skill-upgrade-report.md
examples/async-service/: README.md  async_dependencies.py  async_repository.py  async_uow.py
examples/device/: __init__.py  models.py  repository.py  repository_sa.py  router.py  schemas.py  service.py  uow.py
examples/minimal-service/: README.md
examples/minimal-service/app/: __init__.py
scripts/: apply_skeleton.py  scaffold_adapter.py  scaffold_domain.py
skeleton/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
skeleton/.github/workflows/: ci.yml
skeleton/app/: __init__.py  config.py  main.py
skeleton/app/core/: __init__.py  auth.py  db.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  metrics.py  pagination.py  repository.py  responses.py  uow.py
skeleton/app/domain/: __init__.py
skeleton/app/infra/: __init__.py
skeleton/migrations/: env.py
skeleton/tests/: __init__.py  conftest.py  test_health.py
skeleton/tests/domain/: README.md
skeleton/tests/integration/: __init__.py  test_example_crud.py
skeleton/tests/unit/: __init__.py  test_auth.py  test_exceptions.py
(+60 files in other folders)
