[project]
name = "koi-service"
version = "0.1.0"
description = "Koi blueprint generated Python service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "PyJWT>=2.10,<3.0",
  "structlog>=24.4,<26.0",
  "SQLAlchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.14,<2.0",
  "redis>=5.2,<6.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11,<1.0",
  "pyright>=1.1.400,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-mock>=3.14,<4.0",
  "pytest-cov>=6.0,<8.0",
  "testcontainers[postgres]>=4.10,<5.0",
  "httpx>=0.28,<1.0",
  "bandit>=1.8,<2.0",
  "pip-audit>=2.7,<3.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]
ignore = ["B008", "RUF001", "RUF002", "RUF003", "UP046"]
# S = flake8-bandit rules via ruff (security linting)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603"]
"skeleton/tests/**/*.py" = ["S101", "S603"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app", "tests"]
reportUnusedFunction = false  # FastAPI 装饰器注册的函数会被误报为未使用

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "unit: 单元测试 (无须外部依赖)",
    "integration: 集成测试 (需要 Docker / 数据库)",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*"]

[tool.coverage.report]
show_missing = true
